2014-4-24 Yu-Sung Su     <suyusung@tsinghua.edu.cn>
   * DESCRIPTION (Version, Date): 1.7-02
   * R/simmer.R: simmer attaches names to fixed effects
   * R/fitted: fitted uses correct observational weights for glmms
   * R/bayesglm: use change the use of lm.fit to lm.wfit.

2013-11-25 Yu-Sung Su     <suyusung@tsinghua.edu.cn>
   * DESCRIPTION (Version, Date): 1.6-10
   * make changes that fit to oldrelease R.
   * R/se.ranef, se.coef: change postVar to condVar

2013-9-23 Yu-Sung Su     <suyusung@tsinghua.edu.cn>
   * DESCRIPTION (Version, Date): 1.6-09
   * start supporting new lme4

2013-9-23 Yu-Sung Su     <suyusung@tsinghua.edu.cn>
   * DESCRIPTION (Version, Date): 1.6-09
   * start supporting new lme4

2013-8-22 Yu-Sung Su     <suyusung@tsinghua.edu.cn>
   * DESCRIPTION (Version, Date): 1.6-07
   * revert back to 1.6-07, stop supporting the new lme4.
   * R/bayesglm: fix various bugs

2013-8-21 Yu-Sung Su     <suyusung@tsinghua.edu.cn>
   * DESCRIPTION (Version, Date): 1.6-08
   * clean up DESCRIPTION and NAMESPACE

2013-7-12 Yu-Sung Su     <suyusung@tsinghua.edu.cn>
   * DESCRIPTION (Version, Date): 1.6-07
   * made various change to adjust the new lme4
   * currently, sim.mer is not working, waiting for revision.


2013-5-9 Yu-Sung Su     <suyusung@tsinghua.edu.cn>
   * DESCRIPTION (Version, Date): 1.6-06
   * NAMESPACE: export new method fitted() for sim.mer
   * R/fitted: add fitted() for sim.mer object
   * man/sim: add description for fitted() for sim.mer object
   * R/bayesglm fix a bug in bayesglm() in "subset"

2013-3-8 Yu-Sung Su     <suyusung@tsinghua.edu.cn>
   * DESCRIPTION (Version, Date): 1.6-05
   * NAMESPACE: export logit()


2013-2-27 Yu-Sung Su     <suyusung@tsinghua.edu.cn>
   * DESCRIPTION (Version, Date): 1.6-04
    * R/coefplot: fix a bug when the formula does not have an intercept
   * man/bayesglm: fix a coding error for weights in the bayesglm.fit


2013-2-20 Yu-Sung Su     <suyusung@tsinghua.edu.cn>